kubernetes/apps/default/karakeep/deploy-meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep-meilisearch
  namespace: default
  labels:
    app: karakeep
    component: meilisearch
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: karakeep
      component: meilisearch
  template:
    metadata:
      labels:
        app: karakeep
        component: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.54.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7700
              name: http
          volumeMounts:
            - name: karakeep-meilisearch-data
              mountPath: /meili_data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: karakeep-meilisearch-data
          persistentVolumeClaim:
            claimName: karakeep-meilisearch-pvc-lh
