kubernetes/apps/default/karakeep/deploy-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep-web
  namespace: default
  labels:
    app: karakeep
    component: web
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: karakeep
      component: web
  template:
    metadata:
      labels:
        app: karakeep
        component: web
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: web
          image: ghcr.io/karakeep-app/karakeep:0.33.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: karakeep-data
              mountPath: /data
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
      volumes:
        - name: karakeep-data
          persistentVolumeClaim:
            claimName: karakeep-data-pvc-lh
