kubernetes/apps/default/karakeep/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep
  namespace: default
  labels:
    app: karakeep
    component: web
spec:
  type: ClusterIP
  selector:
    app: karakeep
    component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep-meilisearch
  namespace: default
  labels:
    app: karakeep
    component: meilisearch
spec:
  type: ClusterIP
  selector:
    app: karakeep
    component: meilisearch
  ports:
    - name: http
      port: 7700
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: karakeep-chrome
  namespace: default
  labels:
    app: karakeep
    component: chrome
spec:
  type: ClusterIP
  selector:
    app: karakeep
    component: chrome
  ports:
    - name: debugging
      port: 9222
      targetPort: debugging
      protocol: TCP
